--- a/exe3/style.css
+++ b/exe3/style.css
@@ -3,7 +3,9 @@
   height: 20px;
 }
 
-div {
+section,
+aside,
+main {
   width: 400px;
 }
 
@@ -31,8 +33,18 @@ ul,
   background-color: blanchedalmond;
 }
 
-.points {
+em {
   color: blue;
   font-weight: bold;
   font: 1em sans-serif;
+}
+
+.card {
+  border: 1px solid black;
+  background-color: blanchedalmond;
+  margin: 20px 0px ;
+}
+
+section img {
+  width: 400px;
 }
