--- a/exe7_2/style.css
+++ b/exe7_2/style.css
@@ -95,6 +95,12 @@ footer li {
 }
 
 /*7-2 updates*/
+.navigationBar{
+  position: fixed;
+  width: 100%;
+  top: 5%; 
+}
+
 .navSection{
   background-color: black;
   color:  beige;
@@ -108,6 +114,9 @@ footer li {
 .navSection:hover{
   background-color: beige;
   color:  black;
+}
+main{
+  margin-top: 10%;
 }
 .links{
   float: left;
