--- a/exe9-1/style.css
+++ b/exe9-1/style.css
@@ -22,6 +22,9 @@ body {
     #title #wideScreen {
       display: block;
     }
+    #title #wideScreen h1{
+      font-size: 120%;
+    }
   }
   /* Normal */
   @media (min-width: 769px) and (max-width: 1200px) {
@@ -31,9 +34,11 @@ body {
     }
     #title #normal {
       display: block;
+      font-size: 110%;
     }
+    
   }
-
+  
   /* Tablet */
   @media (min-width: 501px) and (max-width: 768px) {
     body {
@@ -41,6 +46,7 @@ body {
     }
     #title #tablet {
       display: block;
+      font-size: 100%;
     }
   }
   /* smartphones */
@@ -50,6 +56,7 @@ body {
     }
     #title #smartPhone {
       display: block;
+      font-size: 90%;
     }
   }
 }
@@ -60,5 +67,6 @@ body {
   }
   #title #landScape {
     display: block;
+    font-size: 150%;
   }
 }
