--- a/exe11-4/style.css
+++ b/exe11-4/style.css
@@ -5,14 +5,16 @@ main{
 #container{
     background-color: beige;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .box{
     width: 100px;
     height: 100px;
+    padding: 10px;
+    margin: 10px;
+    flex: 1;
 }
 
 #box1{
