--- a/MayKHotel/style.css
+++ b/MayKHotel/style.css
@@ -7,6 +7,9 @@ nav {
   max-width: 90%;
   overflow: auto;
 }
+#search{
+  float: right;
+}
 
 /*navigation bar section*/
 header section {
@@ -71,7 +74,7 @@ header section {
 }
 
 /* form section */
-form {
+.showcase-content form {
   background-color: white;
   float: left;
   position: absolute;
@@ -80,7 +83,7 @@ form {
   height: 20%;
   width: 90%;
 }
-form input {
+.showcase-content form input {
   width: 20%;
   font-size: 110%;
   padding: 1%;
@@ -148,21 +151,20 @@ form input {
   }
 
 /* Contact us Form */
-#contactForm{
-    margin: auto;
-    max-width: 90%;
-    background-color: #ddd;
+#main-box {
+  background-color: lightgray;
+  margin: auto;
+  max-width: 40%;
+  padding: 4%;
 }
-#contactForm form{
-    margin: auto;
-    max-width: 90%;
-    background-color: #ddd; 
-    
+#main-box form,
+#main-box input,
+#main-box label,
+#main-box button,
+#main-box textarea {
+  display: block;
+  margin: 10px;
 }
-#contactForm p{
-    display: inline;
-}
-
 
 /* to fit for smaller screen size */
 @media only screen and (max-width: 1200px) {
