--- a/exe12-5/style.css
+++ b/exe12-5/style.css
@@ -16,6 +16,7 @@ a:hover::after , a:first-child:hover::after{
     width: 110px;
     border-radius: 30px;
     padding: 10px;
+    z-index: 10;
 }
 
 a:hover::after{
