--- a/exe14-1/style.css
+++ b/exe14-1/style.css
@@ -2,10 +2,13 @@
   --box-width: 500px;
   --box-height: 500px;
 }
-
+body{
+}
 #box1 {
   background-color: green;
   width: var(--box-width);
+  position: relative;
+  overflow: hidden;
   height: var(--box-height);
 }
 
@@ -32,7 +35,6 @@
     transform: translate(100px, 0);
 }
 100% {
-      background-color: blue;
     transform: translate(0, 0);
   }
 }
